  - Ensure xml:lang is set by XmlClean for DocBook 5 sources. BZ #696397
  - Added handling of defaults file. BZ #599283
  - Catch txt not being rebuilt. BZ #802576
  - Catch invalid version when installing book. BZ #748657
  - Fix duplicate IDs in HTML outputs. BZ #788576
  - Fix some epub validation errors. BZ #701667
  - Add brand_dir option and publican XSL name space. BZ #800252

2.6-3 Thu Jul 28 2011 
  - Force publican to use UTF8 for command line options.
  - Add rpmlint cfg for brew checks.

2.6-2 Wed Jul 27 2011 
  - Fix archness ... java hate increases

2.6 Mon Jul 25 2011 
  - Catch FOP failing. BZ #661551
  - Have XmlClean treat address element as verbatim. BZ #662907
  - Fix task missing ID. BZ #672439
  - Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
  - Fix perl critic encoding check failing. BZ #684509
  - Update docbook-style-xsl req to 1.76.1 for epub change. BZ #697382
  - Add keep_id to steps. BZ #697370
  - Update BZ links to point to Publican component.
  - Catch empty tags that break packaging. (abstract, subtitle) BZ #663206
  - Add rpmlint check for mock builds. BZ #663203
  - Fix web menu localisation being lost on rebuild from package. BZ #662897
  - Fix UTF8 issue in TXT output. BZ #673855
  - Fix some set validation errors. BZ #673402
  - Fix packaging of stand alone sets. BZ #689347
  - Switch normal output to STDOUT, added croak call. BZ #688447
  - Added mainfile parameter. BZ #688585
  - Add rename action. BZ #694698
  - Added detection of mixed_mode tags to XmlClean. BZ #688286
  - Add update_db action to allow more robust packaging. BZ #661948
  - Fix show_unknown not working. BZ #662162
  - Fix version 0 not installing on web site. BZ #702550
  - Don't validate xml parsed as text in print_unused. BZ #705956
  - Add manual_toc_update config for web-sites. BZ #719573
  - Use the force option for cvs-import.sh BZ #718102
  - Fix admonition layout. BZ #715158