@@ -673,8 +673,6 @@ Users_Guide/en-US/Image_width.xml
 Users_Guide/en-US/images/cover_thumbnail.png
 Users_Guide/en-US/images/icon.svg
 Users_Guide/en-US/images/logos/engops.png
-Users_Guide/en-US/images/logos/engops.svg
-Users_Guide/en-US/images/screenshots/directory_structure.png
 Users_Guide/en-US/Installing_a_Brand.xml
 Users_Guide/en-US/Installing_Publican.xml
 Users_Guide/en-US/Introduction.xml
